--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
