--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "react",
     "module": "esnext",
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "strict": true,
     "noImplicitAny": false, // can be removed after adding module type definitions
